[gd_scene load_steps=7 format=2]

[ext_resource path="res://Materials/Prototype/ProtoPurple_04.material" type="Material" id=1]
[ext_resource path="res://Materials/Prototype/ProtoRed_04.material" type="Material" id=2]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=3]

[sub_resource type="CapsuleShape" id=1]
radius = 0.606541
height = 1.6

[sub_resource type="CapsuleMesh" id=2]
radius = 0.607
mid_height = 1.6

[sub_resource type="PrismMesh" id=3]
size = Vector3( 0.5, 0.5, 0.197 )

[node name="Player" type="KinematicBody"]
script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.41643, 0 )
shape = SubResource( 1 )

[node name="Mesh" type="Spatial" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )

[node name="Body" type="CSGMesh" parent="Mesh"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.416, 0 )
mesh = SubResource( 2 )
material = ExtResource( 1 )

[node name="Face" type="CSGMesh" parent="Mesh"]
transform = Transform( 1, 3.57628e-07, -1.42109e-14, 0, -4.37114e-08, -1, -3.57628e-07, 1, -4.37114e-08, 0, 2.31514, 0.863176 )
mesh = SubResource( 3 )
material = ExtResource( 2 )

[node name="CamY" type="Spatial" parent="."]
unique_name_in_owner = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.157, 0 )

[node name="CamX" type="Spatial" parent="CamY"]
unique_name_in_owner = true
transform = Transform( 1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 0, 0 )

[node name="SpringArm" type="SpringArm" parent="CamY/CamX"]
spring_length = 6.0
margin = 0.05

[node name="CameraTarget" type="Spatial" parent="CamY/CamX/SpringArm"]
unique_name_in_owner = true
